# kr5

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tasks.md
app/: __init__.py  dependencies.py  main.py  schemas.py  storage.py
app/routers/: __init__.py  admin.py  tasks.py  users.py  ws.py
tests/: conftest.py  test_dependencies_and_routing.py  test_tasks.py  test_websocket.py
