[project]
name = "kr5"
version = "0.1.0"
description = "FastAPI task manager для контрольной работы №5"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "KR5 Team" }
]
dependencies = [
  "fastapi>=0.105.0",
  "uvicorn[standard]>=0.23.0"
]
packages = [
  { include = "app" }
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
